[tool.poetry]
name = "flimit"
version = "0.1.0"
description = "Limit time and memory usage from a function"
authors = ["Quentin Fortier <qpfortier@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
